--- a/scss/style.css
+++ b/scss/style.css
@@ -4,12 +4,19 @@
 }
 
 .navbar li {
-  padding: 0 2rem;
+  padding: 0 1.3rem;
 }
 
 .navbar li a {
   text-transform: capitalize;
-  font-weight: 700;
+  font-weight: 300;
+}
+
+@use 'typography';
+h1, h2, h3, h4, h5 {
+  font-weight: 600;
+  margin: 2rem;
+  text-align: center;
 }
 
 * {
@@ -19,6 +26,13 @@
 }
 
 body {
-  background-color: #ceb6b6;
+  background-color: #fcfafa;
+}
+
+.wrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 /*# sourceMappingURL=style.css.map */
