--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,5 +1,6 @@
 @import 'config';
 @import './layouts/navbar';
+@import './layouts/typography';
 
 * {
     box-sizing: border-box;
@@ -8,6 +9,12 @@
 }
 
 body {
-    background-color: rgb(206, 182, 182);
+    background-color: rgb(252, 250, 250);
 }
 
+.wrapper {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
