--- a/scss/layouts/_navbar.scss
+++ b/scss/layouts/_navbar.scss
@@ -1,15 +1,30 @@
 @use 'navbar';
 
+
 .navbar {
-    background-color: $primary-color;
+    // @include gradient;
+
+    padding: 0 2.5rem;
+
+    @media (max-width: $breakpoint-small) {
+        padding: 0;
+    }
 
     li {
-        padding: 0 1.3rem;
+        padding: 0 2.5rem;
+        
+        @media (max-width: $breakpoint-small) {
+            padding: 0;
+        }
 
         a {
             text-transform: capitalize;
-            font-weight: 300;
+            font-weight: 400;
+            color: $secondary-color;
         }
     }
-}
 
+    &-toggler {
+        border: none;
+    }
+}
