Updating BEM classes and creating About section

--- a/scss/config.scss
+++ b/scss/config.scss
@@ -2,7 +2,7 @@ $primary-color: rgba(196, 196, 196, 0.149);
 $secondary-color: rgba(113, 116, 118, 1);
 
 $body-color: #eaeff2;
-
+$footer-color: #c1c2c261;
 // Breakpoints
 $breakpoint-small: 576px;
 $breakpoint-table: 768px;
