--- a/scss/style.scss
+++ b/scss/style.scss
@@ -2,6 +2,8 @@
 @import './layouts/navbar';
 @import './layouts/typography';
 @import './layouts/intro';
+@import './layouts/about';
+@import './layouts/footer';
 
 * {
     box-sizing: border-box;
@@ -10,7 +12,7 @@
 }
 
 body {
-    @include gradient;
+    // @include gradient;
     height: 100%;
     line-height: 1.5;
     font-size: 1.1rem;
