--- a/scss/layouts/_typography.scss
+++ b/scss/layouts/_typography.scss
@@ -5,4 +5,5 @@ h1,h2,h3,h4,h5 {
     margin:2rem;
     text-align: center;
     text-transform: capitalize;
+    font-family: 'Source Serif Pro', serif;
 }
