--- a/scss/style.scss
+++ b/scss/style.scss
@@ -16,6 +16,8 @@ body {
     height: 100%;
     line-height: 1.5;
     font-size: 1.1rem;
+    color: $secondary-color;
+    font-family: 'Font Awesome 5 Brands', serif' ;
 }
 
 .wrapper {
