--- a/scss/config.scss
+++ b/scss/config.scss
@@ -3,6 +3,7 @@ $secondary-color: rgba(113, 116, 118, 1);
 
 $body-color: #eaeff2;
 $footer-color: #c1c2c261;
+$heading-text: #deb887;
 // Breakpoints
 $breakpoint-small: 576px;
 $breakpoint-table: 768px;
