--- a/scss/layouts/_intro.scss
+++ b/scss/layouts/_intro.scss
@@ -12,7 +12,7 @@
     
     &__text{
         font-size: 2rem;
-        color: burlywood;
+        color: $heading-text;
         text-transform: capitalize;
 
         @media (max-width: $breakpoint-small) {
