--- a/scss/style.scss
+++ b/scss/style.scss
@@ -17,11 +17,16 @@ body {
     line-height: 1.5;
     font-size: 1.1rem;
     color: $secondary-color;
-    font-family: 'Font Awesome 5 Brands', serif' ;
-}
+    font-family: 'Font Awesome 5 Brands, serif' ;
 
+    @media (max-width: $breakpoint-small) {
+       p {
+           font-size: .9rem;
+       }
+    }
+}
 .wrapper {
-    max-width: 1920px;
+    max-width: 1366px;
     width: 100%;
     margin: auto;
 }
