--- a/scss/layouts/_about.scss
+++ b/scss/layouts/_about.scss
@@ -4,7 +4,7 @@
     height: 100vh;
     text-align: center;
 
-    &__first-columm {
+    &__first-column {
         display: flex;
         flex-direction: column;
         justify-content: center;
