Added new config var for the portfolio section

--- a/scss/layouts/_typography.scss
+++ b/scss/layouts/_typography.scss
@@ -7,3 +7,8 @@ h1,h2,h3,h4,h5 {
     text-transform: capitalize;
     font-family: 'Source Serif Pro', serif;
 }
+
+.list-group-item {
+    font-size: .8rem;
+    
+}
