--- a/scss/style.scss
+++ b/scss/style.scss
@@ -3,6 +3,7 @@
 @import './layouts/typography';
 @import './layouts/intro';
 @import './layouts/about';
+@import './layouts/portfolio';
 @import './layouts/footer';
 
 * {
