--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -4,6 +4,8 @@ $secondary-color: rgba(113, 116, 118, 1);
 $body-color: #eaeff2;
 $footer-color: #c1c2c261;
 $heading-text: #deb887;
+$portfolio-item: #a3a3a3;
+
 // Breakpoints
 $breakpoint-small: 576px;
 $breakpoint-table: 768px;
