Styling the contact form and added

--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -6,6 +6,9 @@ $footer-color: #c1c2c261;
 $heading-text: #deb887;
 $portfolio-item: #a3a3a3;
 
+$card-form-background-color: #fdfaf6;
+// $input-border-focus: red;
+
 // Breakpoints
 $breakpoint-small: 576px;
 $breakpoint-table: 768px;
