--- a/scss/layouts/_portfolio.scss
+++ b/scss/layouts/_portfolio.scss
@@ -1,12 +1,12 @@
 @use 'portfolio';
 
 .portfolio {
-    height: 100vh;
+    // height: 100vh;
 
     &__card {
         background-color: #f1e1cc2e;
         border: none;
-        box-shadow: 0px 0px 6px 0px #f1e1a6;
+        box-shadow: 0px 0px 3px 0px #f1e1a6;
     }
 
     &__list {
@@ -32,7 +32,6 @@
         border: none;
         width: 45%;
         white-space: nowrap;
-        padding: 0px;
         font-size: .8rem;
     }
 
