--- a/scss/layouts/_typography.scss
+++ b/scss/layouts/_typography.scss
@@ -1,11 +1,14 @@
 @use 'typography';
 
-h1,h2,h3,h4,h5 {
-    font-weight: 600;
-    margin: 1.2rem;
+h1,h2,h3,h4 {
+    font-weight: 400;
     text-align: center;
     text-transform: capitalize;
     font-family: 'Source Serif Pro', serif;
+
+    @media (max-width: $breakpoint-small) {
+        padding-top: 1rem;
+    }
 }
 
 .list-group-item {
