--- a/scss/style.scss
+++ b/scss/style.scss
@@ -4,6 +4,7 @@
 @import './layouts/intro';
 @import './layouts/about';
 @import './layouts/portfolio';
+@import './layouts/contact';
 @import './layouts/footer';
 
 * {
@@ -14,7 +15,6 @@
 
 body {
     // @include gradient;
-    height: 100%;
     line-height: 1.5;
     font-size: 1.1rem;
     color: $secondary-color;
@@ -26,6 +26,7 @@ body {
        }
     }
 }
+
 .wrapper {
     max-width: 1366px;
     width: 100%;
