changed hero img

--- a/scss/layouts/_contact.scss
+++ b/scss/layouts/_contact.scss
@@ -28,6 +28,10 @@
             width: 100%;
         }
     }
+
+    &__form__group--label {
+        color: $heading-text;
+    }
 }
 
 .form-control {
