--- a/scss/layouts/_intro.scss
+++ b/scss/layouts/_intro.scss
@@ -28,6 +28,7 @@
     
     &__text{
         font-size: 2rem;
+        font-style: italic;
         color: $heading-text;
         text-transform: capitalize;
 
