--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -5,6 +5,7 @@ $body-color: #eaeff2;
 $footer-color: #c1c2c261;
 $heading-text: #deb887;
 $portfolio-item: #a3a3a3;
+$portfolio-list-item: #f9f4ee;
 
 $card-form-background-color: #fdfaf6;
 // $input-border-focus: red;
