--- a/scss/layouts/_portfolio.scss
+++ b/scss/layouts/_portfolio.scss
@@ -30,6 +30,7 @@
         &--item {
             color: $portfolio-item ;
             text-transform: capitalize;
+            background: $portfolio-list-item;
         }
     }
 
@@ -47,6 +48,7 @@
         width: 45%;
         white-space: nowrap;
         font-size: .8rem;
+        margin-top: 10px;
     }
 
 }
