--- a/scss/layouts/_footer.scss
+++ b/scss/layouts/_footer.scss
@@ -5,9 +5,7 @@
     &__social-media {
         padding: 1.5rem!important;
         display: flex;
-        flex-direction: row;
-        align-items: center;
-        justify-content: space-around;
+        justify-content: space-evenly;
     }
 
     &__icon {
