Adding extra colums for the about me

--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -6,6 +6,7 @@ $footer-color: #c1c2c261;
 $heading-text: #deb887;
 $portfolio-item: #a3a3a3;
 $portfolio-list-item: #f9f4ee;
+$button-hover:  #fca00070;
 
 $card-form-background-color: #fdfaf6;
 // $input-border-focus: red;
