Adding grid to about section

--- a/scss/layouts/_about.scss
+++ b/scss/layouts/_about.scss
@@ -40,6 +40,12 @@
     &__get-in-touch {
         font-family: 'Font Awesome 5 Free', 'cursive';
         color: $portfolio-item;
+
+        &--align-middle {
+            display: grid;
+            justify-content: center;
+            align-items: center;
+        }
     }
 
     .fas {
