--- a/scss/layouts/_intro.scss
+++ b/scss/layouts/_intro.scss
@@ -4,7 +4,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    // height: 100vh;
     // height: calc(100vh - 63px);  
 
     @media (max-width: $breakpoint-small) {
