--- a/scss/layouts/_portfolio.scss
+++ b/scss/layouts/_portfolio.scss
@@ -6,7 +6,11 @@
     &__card {
         background-color: #f1e1cc2e;
         border: none;
-        box-shadow: 0px 0px 3px 0px #f1e1a6;
+        box-shadow: 0px 20px 23px -20px $heading-text;
+
+        @media (max-width: $breakpoint-small) {
+            padding-top: 1rem;
+        }
     }
 
 
