--- a/scss/layouts/_about.scss
+++ b/scss/layouts/_about.scss
@@ -30,6 +30,11 @@
         width: 60%;
         border-radius: 50%;
         border: 3px solid $heading-text;
+        transition: transform 0.8s;
+
+        &:hover {
+            transform: perspective(200px) rotateY(-2deg);
+        }
     }
 
     &__email {
