--- a/scss/layouts/_portfolio.scss
+++ b/scss/layouts/_portfolio.scss
@@ -7,9 +7,14 @@
         background-color: #f1e1cc2e;
         border: none;
         box-shadow: 0px 20px 23px -20px $heading-text;
+        transition-duration: .8s;
 
         @media (max-width: $breakpoint-small) {
             padding-top: 1rem;
+        }
+
+        &:hover {
+            transform: scale(1.02);
         }
     }
 
@@ -52,16 +57,26 @@
         white-space: nowrap;
         font-size: .8rem;
         margin-top: 10px;
-        transition: all .2s ease-in-out;
+        box-shadow: inset 0 0 0 0 $button-hover;
+        transition: ease-out 0.4s;
 
         &:hover{
+            width: 45%;
+            height: auto;
             color: $secondary-color;
             background-color: $button-hover;
-            border-color: #565e64;
-            box-shadow: none;
-            transform: scale(.9);
+            box-shadow: inset 200px 0 0 0 $button-hover;
         }
 
+        &--submit {
+            width: auto;
+
+            &:hover {
+                width: auto;
+            }
+        }
+        
+        
         &:focus{
             color: $secondary-color;
             background-color: $button-hover;
