--- a/scss/style.css
+++ b/scss/style.css
@@ -93,6 +93,14 @@ h1, h2, h3, h4 {
   }
 }
 
+.hero__img {
+  transition: transform 0.8s;
+}
+
+.hero__img:hover {
+  transform: perspective(200px) rotateY(-1deg);
+}
+
 .hero__first-columm {
   display: flex;
   flex-direction: column;
@@ -159,6 +167,11 @@ h1, h2, h3, h4 {
   width: 60%;
   border-radius: 50%;
   border: 3px solid #deb887;
+  transition: transform 0.8s;
+}
+
+.about__img:hover {
+  transform: perspective(200px) rotateY(-2deg);
 }
 
 .about__email {
@@ -190,12 +203,17 @@ strong {
   background-color: #f1e1cc2e;
   border: none;
   box-shadow: 0px 20px 23px -20px #deb887;
+  transition-duration: .8s;
 }
 
 @media (max-width: 576px) {
   .portfolio__card {
     padding-top: 1rem;
   }
+}
+
+.portfolio__card:hover {
+  transform: scale(1.02);
 }
 
 .portfolio__card-title {
@@ -236,15 +254,24 @@ strong {
   white-space: nowrap;
   font-size: .8rem;
   margin-top: 10px;
-  transition: all .2s ease-in-out;
+  box-shadow: inset 0 0 0 0 #fca00070;
+  transition: ease-out 0.4s;
 }
 
 .portfolio__button:hover {
+  width: 45%;
+  height: auto;
   color: #717476;
   background-color: #fca00070;
-  border-color: #565e64;
-  box-shadow: none;
-  transform: scale(0.9);
+  box-shadow: inset 200px 0 0 0 #fca00070;
+}
+
+.portfolio__button--submit {
+  width: auto;
+}
+
+.portfolio__button--submit:hover {
+  width: auto;
 }
 
 .portfolio__button:focus {
@@ -313,10 +340,6 @@ strong {
   background-color: none;
   border: 1px solid #fdfaf6;
   box-shadow: 0px 0px 3px 0px #f1e1a6;
-}
-
-.portfolio__button--contact {
-  width: auto;
 }
 
 @use 'footer';
