Stying fas icons and sharing with about section

--- a/scss/layouts/_about.scss
+++ b/scss/layouts/_about.scss
@@ -54,7 +54,9 @@
     }
 
     .fas {
-        color: $heading-text
+        color: $heading-text;
+        font-size: 1.4rem;
+        transition: transform .8s;
     }
 }
 
